@@ -13,12 +13,15 @@ import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.Event;
+import uk.gov.hmcts.reform.ccd.client.model.EventRequestData;
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
 import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
 import uk.gov.hmcts.reform.ccd.document.am.model.Document;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
+import uk.gov.hmcts.reform.prl.clients.ccd.CcdCoreCaseDataService;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
+import uk.gov.hmcts.reform.prl.enums.CaseEvent;
 import uk.gov.hmcts.reform.prl.mapper.CcdObjectMapper;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.DocumentDetails;
@@ -35,6 +38,8 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURTNAV;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.NA_COURTNAV;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Slf4j
@@ -43,9 +48,10 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 public class CourtNavCaseService {
 
     public static final String COURTNAV_DOCUMENT_UPLOAD_EVENT_ID = "courtnav-document-upload";
-    public static final String[] ALLOWED_FILE_TYPES = {"pdf", "jpeg", "jpg", "doc", "docx", "bmp", "png", "tiff", "txt", "tif"};
-    public static final String[] ALLOWED_TYPE_OF_DOCS = {"WITNESS_STATEMENT", "EXHIBITS_EVIDENCE", "EXHIBITS_COVERSHEET"};
+    protected static final String[] ALLOWED_FILE_TYPES = {"pdf", "jpeg", "jpg", "doc", "docx", "bmp", "png", "tiff", "txt", "tif"};
+    protected static final String[] ALLOWED_TYPE_OF_DOCS = {"WITNESS_STATEMENT", "EXHIBITS_EVIDENCE", "EXHIBITS_COVERSHEET"};
     private final CoreCaseDataApi coreCaseDataApi;
+    private final CcdCoreCaseDataService coreCaseDataService;
     private final IdamClient idamClient;
     private final CaseDocumentClient caseDocumentClient;
     private final AuthTokenGenerator authTokenGenerator;
@@ -56,15 +62,16 @@ public class CourtNavCaseService {
     public CaseDetails createCourtNavCase(String authToken, CaseData caseData) throws Exception {
         Map<String, Object> caseDataMap = caseData.toMap(CcdObjectMapper.getObjectMapper());
         log.info("****************Creating courtnav case***************");
-        StartEventResponse startEventResponse =
-            coreCaseDataApi.startForCaseworker(
-                authToken,
-                authTokenGenerator.generate(),
-                idamClient.getUserInfo(authToken).getUid(),
-                PrlAppsConstants.JURISDICTION,
-                PrlAppsConstants.CASE_TYPE,
-                "courtnav-case-creation"
-            );
+        EventRequestData eventRequestData = coreCaseDataService.eventRequest(
+            CaseEvent.COURTNAV_CASE_CREATION,
+            idamClient.getUserInfo(authToken).getUid()
+        );
+        StartEventResponse startEventResponse = coreCaseDataService.startSubmitCreate(
+            authToken,
+            authTokenGenerator.generate(),
+            eventRequestData,
+            true
+        );
 
         CaseDataContent caseDataContent = CaseDataContent.builder()
             .eventToken(startEventResponse.getToken())
@@ -73,14 +80,12 @@ public class CourtNavCaseService {
                        .build())
             .data(caseDataMap).build();
 
-        return coreCaseDataApi.submitForCaseworker(
+        return coreCaseDataService.submitCreate(
             authToken,
             authTokenGenerator.generate(),
             idamClient.getUserInfo(authToken).getUid(),
-            PrlAppsConstants.JURISDICTION,
-            PrlAppsConstants.CASE_TYPE,
-            true,
-            caseDataContent
+            caseDataContent,
+            true
         );
     }
 
@@ -89,11 +94,15 @@ public class CourtNavCaseService {
         if (null != document && null != document.getOriginalFilename()
             && checkFileFormat(document.getOriginalFilename())
             && checkTypeOfDocument(typeOfDocument)) {
-            CaseDetails tempCaseDetails = checkIfCasePresent(caseId, authorisation);
-            if (tempCaseDetails == null) {
+            EventRequestData eventRequestData = coreCaseDataService.eventRequest(
+                CaseEvent.COURTNAV_DOCUMENT_UPLOAD_EVENT_ID,
+                idamClient.getUserInfo(authorisation).getUid()
+            );
+            StartEventResponse startEventResponse = checkIfCasePresent(caseId, authorisation, eventRequestData);
+            if (startEventResponse == null) {
                 throw new ResponseStatusException(HttpStatus.NOT_FOUND);
             }
-            CaseData tempCaseData = CaseUtils.getCaseData(tempCaseDetails, objectMapper);
+            CaseData tempCaseData = CaseUtils.getCaseDataFromStartUpdateEventResponse(startEventResponse, objectMapper);
             if (tempCaseData.getNumberOfAttachments() != null && tempCaseData.getCourtNavUploadedDocs() != null
                 && Integer.valueOf(tempCaseData.getNumberOfAttachments())
                 <= tempCaseData.getCourtNavUploadedDocs().size()) {
@@ -105,10 +114,10 @@ public class CourtNavCaseService {
                 authTokenGenerator.generate(),
                 PrlAppsConstants.CASE_TYPE,
                 PrlAppsConstants.JURISDICTION,
-                Arrays.asList(document)
+                List.of(document)
             );
             log.info("Document uploaded successfully through caseDocumentClient");
-            CaseData caseData = getCaseDataWithUploadedDocs(
+            updateCaseDataWithUploadedDocs(
                 caseId,
                 document.getOriginalFilename(),
                 typeOfDocument,
@@ -116,70 +125,48 @@ public class CourtNavCaseService {
                 uploadResponse.getDocuments().get(0)
             );
 
-            StartEventResponse startEventResponse =
-                coreCaseDataApi.startEventForCaseWorker(
-                    authorisation,
-                    authTokenGenerator.generate(),
-                    idamClient.getUserInfo(authorisation).getUid(),
-                    PrlAppsConstants.JURISDICTION,
-                    PrlAppsConstants.CASE_TYPE,
-                    caseId,
-                    COURTNAV_DOCUMENT_UPLOAD_EVENT_ID
-                );
-
             CaseDataContent caseDataContent = CaseDataContent.builder()
                 .eventToken(startEventResponse.getToken())
                 .event(Event.builder()
                            .id(startEventResponse.getEventId())
                            .build())
-                .data(caseData).build();
+                .data(tempCaseData).build();
 
-            CaseDetails caseDetails = coreCaseDataApi.submitEventForCaseWorker(
-                authorisation,
-                authTokenGenerator.generate(),
-                idamClient.getUserInfo(authorisation).getUid(),
-                PrlAppsConstants.JURISDICTION,
-                PrlAppsConstants.CASE_TYPE,
-                caseId,
-                true,
-                caseDataContent
-            );
+            coreCaseDataService.submitUpdate(authorisation,
+                                             eventRequestData,
+                                             caseDataContent,
+                                             caseId,
+                                             true);
 
             log.info("Document has been saved in caseData {}", document.getOriginalFilename());
-
         } else {
             log.error("Un acceptable format/type of document {}", typeOfDocument);
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST);
         }
     }
 
-    public CaseDetails checkIfCasePresent(String caseId, String authorisation) {
+    public StartEventResponse checkIfCasePresent(String caseId, String authorisation, EventRequestData eventRequestData) {
         try {
-            CaseDetails caseDetails = coreCaseDataApi.getCase(
-                authorisation,
-                authTokenGenerator.generate(),
-                caseId
-            );
-            return caseDetails;
+            return coreCaseDataService.startUpdate(authorisation, eventRequestData, caseId, true);
         } catch (Exception ex) {
             log.error("Error while getting the case {} {}", caseId, ex.getMessage());
         }
         return null;
     }
 
-    private CaseData getCaseDataWithUploadedDocs(String caseId, String fileName, String typeOfDocument,
-                                                 CaseData tempCaseData, Document document) {
+    private void updateCaseDataWithUploadedDocs(String caseId, String fileName, String typeOfDocument,
+                                                CaseData tempCaseData, Document document) {
         String partyName = tempCaseData.getApplicantCaseName() != null
-            ? tempCaseData.getApplicantCaseName() : "COURTNAV";
+            ? tempCaseData.getApplicantCaseName() : COURTNAV;
         List<Element<UploadedDocuments>> uploadedDocumentsList;
         Element<UploadedDocuments> uploadedDocsElement =
             element(UploadedDocuments.builder().dateCreated(LocalDate.now())
                         .documentType(typeOfDocument)
-                        .uploadedBy("COURTNAV")
+                        .uploadedBy(COURTNAV)
                         .documentDetails(DocumentDetails.builder().documentName(fileName)
                                              .documentUploadedDate(new Date().toString()).build())
-                        .partyName(partyName).isApplicant("NA_COURTNAV")
-                        .parentDocumentType("NA_COURTNAV")
+                        .partyName(partyName).isApplicant(NA_COURTNAV)
+                        .parentDocumentType(NA_COURTNAV)
                         .citizenDocument(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
                                              .documentUrl(document.links.self.href)
                                              .documentBinaryUrl(document.links.binary.href)
@@ -192,7 +179,8 @@ public class CourtNavCaseService {
             uploadedDocumentsList = new ArrayList<>();
             uploadedDocumentsList.add(uploadedDocsElement);
         }
-        return CaseData.builder().id(Long.valueOf(caseId)).courtNavUploadedDocs(uploadedDocumentsList).build();
+
+        tempCaseData.builder().courtNavUploadedDocs(uploadedDocumentsList).build();
     }
 
     private boolean checkTypeOfDocument(String typeOfDocument) {
